--- a/shoes_product4.html
+++ b/shoes_product4.html
@@ -339,21 +339,21 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/skwgyqrbfzhu6uyeh0gg/air-max-270-mens-shoes-KkLcGR.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/5e7687f1-c13e-4bac-8ffa-a6f863ae9157/NIKE+DUNK+HI+RETRO.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/skwgyqrbfzhu6uyeh0gg/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/5e7687f1-c13e-4bac-8ffa-a6f863ae9157/NIKE+DUNK+HI+RETRO.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/45bb2189-245f-4b78-8cad-485bbc723c39/NIKE+DUNK+HI+RETRO.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/332da330-4bb3-42d3-9123-5c7e64789342/NIKE+DUNK+HI+RETRO.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/ac4c2d4d-06fc-4e92-9fec-c78cbb110c5f/NIKE+DUNK+HI+RETRO.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Max 270</h1>
-        <h2>$129.99</h2>
+        <h1>Nike Dunk High Retro</h1>
+        <h2> ₹10,257.37</h2>
 
-        <p><strong>Description:</strong> The Nike Air Max 270 delivers a fresh take on the iconic Air Max series with its large Air unit in the heel for all-day comfort. The breathable mesh upper provides lightweight support.</p>
+        <p><strong>Description:</strong> Heritage meets high-top style. The Nike Dunk High Retro brings back the '80s basketball classic with premium leather, bold color blocking, and padded comfort </p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -368,7 +368,7 @@
         </div>
 
        <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="304" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="304" data-name="Nike Dunk High Retro" data-price="₹10,257.37">
   		        Add to Bag
 	        </button>
         </div>
