--- a/shoes_product6.html
+++ b/shoes_product6.html
@@ -339,19 +339,19 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/skwgyqrbfzhu6uyeh0gg/air-max-270-mens-shoes-KkLcGR.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/84288f23-ed0e-4851-90e6-34601af59510/ARZM+INFNTY+TRNXT%252+NRG+AGST+W.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/skwgyqrbfzhu6uyeh0gg/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/84288f23-ed0e-4851-90e6-34601af59510/ARZM+INFNTY+TRNXT%252+NRG+AGST+W.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/a303cc3a-eb48-41a2-bdc5-6c29dcdee4f3/ARZM+INFNTY+TRNXT%252+NRG+AGST+W.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/55b6702d-01f7-4687-b4bf-94fcc641a0e3/ARZM+INFNTY+TRNXT%252+NRG+AGST+W.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/75ff4483-7014-41b1-a5c9-c2ed8aa43ef3/ARZM+INFNTY+TRNXT%252+NRG+AGST+W.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Max 270</h1>
-        <h2>$129.99</h2>
+        <h1>Nike Infinity Golf Shoes</h1>
+        <h2> ₹17,495.00</h2>
 
         <p><strong>Description:</strong> The Nike Air Max 270 delivers a fresh take on the iconic Air Max series with its large Air unit in the heel for all-day comfort. The breathable mesh upper provides lightweight support.</p>
 
@@ -368,7 +368,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="306" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="306" data-name="Nike Infinity Golf Shoes" data-price="₹17,495.00">
   		        Add to Bag
 	        </button>
         </div>
