--- a/shoes_product6.html
+++ b/shoes_product6.html
@@ -353,7 +353,7 @@
         <h1>Nike Infinity Golf Shoes</h1>
         <h2> ₹17,495.00</h2>
 
-        <p><strong>Description:</strong> The Nike Air Max 270 delivers a fresh take on the iconic Air Max series with its large Air unit in the heel for all-day comfort. The breathable mesh upper provides lightweight support.</p>
+        <p><strong>Description:</strong> Engineered for stability and comfort, the Nike Infinity Golf Shoes deliver responsive cushioning, excellent grip, and a sleek design.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
