--- a/shoes_product9.html
+++ b/shoes_product9.html
@@ -339,21 +339,21 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/skwgyqrbfzhu6uyeh0gg/air-max-270-mens-shoes-KkLcGR.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/e783e052-9360-4afb-adb8-c4e9c0f5db07/NIKE+AIR+MAX+NUAXIS.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/skwgyqrbfzhu6uyeh0gg/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/e783e052-9360-4afb-adb8-c4e9c0f5db07/NIKE+AIR+MAX+NUAXIS.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/267fcdb6-89ae-40eb-846c-f0c88aadf562/NIKE+AIR+MAX+NUAXIS.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/aa7207e4-15d6-46b4-9141-57bf2a7afdfb/NIKE+AIR+MAX+NUAXIS.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/d7c18851-f94d-4434-94c2-84e381621668/NIKE+AIR+MAX+NUAXIS.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Max 270</h1>
-        <h2>$129.99</h2>
+        <h1>Nike Air Max Nuaxis</h1>
+        <h2> ₹8,495.00</h2>
 
-        <p><strong>Description:</strong> The Nike Air Max 270 delivers a fresh take on the iconic Air Max series with its large Air unit in the heel for all-day comfort. The breathable mesh upper provides lightweight support.</p>
+        <p><strong>Description:</strong> Fusing bold design with everyday comfort, the Nike Air Max Nuaxis features a layered upper, visible Air cushioning, and a futuristic look made for modern street style.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -368,7 +368,7 @@
         </div>
 
        <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="309" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="309" data-name="Nike Air Max Nuaxis" data-price="₹8,495.00">
   		        Add to Bag
 	        </button>
         </div>
