--- a/return.html
+++ b/return.html
@@ -49,7 +49,7 @@
     </style>
 </head>
 <body>
-    <div class="header">
+   <div class="header">
         <div class="header-left">
             <div class="logo">
                 <a href="homepage.html">
@@ -65,8 +65,8 @@
         </div>
         <div class="help-signup">
             <a href="help.html">Help</a>
-            <a href="#">Orders</a>
-            <a href="signup.html">Log In</a>
+            <a href="orders.html">Orders</a>
+            <a href="login&signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
@@ -127,7 +127,8 @@
     <footer>
         <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
-            <button>Sign Up for Free →</button>
+            <button onclick="window.location.href='https://ryanatrix.github.io/UID/login&signup.html'">Sign Up for Free →</button>
+
         </div>
         <div class="footer-content">
             <div class="footer-column">
