--- a/shoe_detail_enhanced.html
+++ b/shoe_detail_enhanced.html
@@ -403,9 +403,10 @@
 
   <footer>
     <div class="promo-banner">
-        <p>JOIN Athletix AND GET 10% OFF</p>
-        <button>Sign Up for Free →</button>
-    </div>
+            <p>JOIN Athletix AND GET 10% OFF</p>
+            <button onclick="window.location.href='https://ryanatrix.github.io/UID/login&signup.html'">Sign Up for Free →</button>
+
+        </div>
     <div class="footer-content">
         <div class="footer-column">
             <h3>PRODUCTS</h3>
