--- a/homepage.html
+++ b/homepage.html
@@ -3,6 +3,8 @@
 <head>
     <title>Athletix</title>
     <style>
+        <link rel="icon" href="fav.jpeg" type="image/jpeg">
+
         body {
             margin: 0;
             font-family: Arial, sans-serif;
