--- a/basketball_product1.html
+++ b/basketball_product1.html
@@ -307,7 +307,7 @@
   </style>
 </head>
 <body style="background-color: white;">
-  <div class="header">
+ <div class="header">
         <div class="header-left">
             <div class="logo">
                 <a href="homepage.html">
@@ -322,9 +322,9 @@
             </div>
         </div>
         <div class="help-signup">
-            <a href="#">Help</a>
-            <a href="#">Orders</a>
-            <a href="#">Log In</a>
+            <a href="help.html">Help</a>
+            <a href="orders.html">Orders</a>
+            <a href="login&signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
@@ -382,7 +382,8 @@
   <footer>
         <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
-            <button>Sign Up for Free →</button>
+            <button onclick="window.location.href='https://ryanatrix.github.io/UID/login&signup.html'">Sign Up for Free →</button>
+
         </div>
         <div class="footer-content">
             <div class="footer-column">
