--- a/help.html
+++ b/help.html
@@ -81,8 +81,8 @@
         </div>
         <div class="help-signup">
             <a href="help.html">Help</a>
-            <a href="#">Orders</a>
-            <a href="signup.html">Log In</a>
+            <a href="orders.html">Orders</a>
+            <a href="login&signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
@@ -136,7 +136,8 @@
     <footer>
         <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
-            <button>Sign Up for Free →</button>
+            <button onclick="window.location.href='https://ryanatrix.github.io/UID/login&signup.html'">Sign Up for Free →</button>
+
         </div>
         <div class="footer-content">
             <div class="footer-column">
