--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@
             margin-top: 60px;
         }
     </style>
+    <link rel="icon" href="fav.jpeg" type="image/jpeg">
 </head>
 <body>
     <div class="header">
@@ -70,8 +71,8 @@
         </div>
         <div class="help-signup">
             <a href="help.html">Help</a>
-            <a href="#">Orders</a>
-            <a href="signup.html">Log In</a>
+            <a href="orders.html">Orders</a>
+            <a href="login&signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
@@ -125,8 +126,9 @@
     <footer>
         <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
-            <button>Sign Up for Free →</button>
-        </div>
+            <button onclick="window.location.href='https://ryanatrix.github.io/UID/login&signup.html'">Sign Up for Free →</button>
+
+        </div>>
         <div class="footer-content">
             <div class="footer-column">
                 <h3>CATEGORIES</h3>
