--- a/basketball_product4.html
+++ b/basketball_product4.html
@@ -305,6 +305,7 @@
         }
     
   </style>
+	<link rel="icon" href="fav.jpeg" type="image/jpeg">
 </head>
 <body style="background-color: white;">
  <div class="header">
