--- a/cricket_product3.html
+++ b/cricket_product3.html
@@ -323,9 +323,9 @@
             </div>
         </div>
         <div class="help-signup">
-            <a href="#">Help</a>
-            <a href="#">Orders</a>
-            <a href="#">Log In</a>
+            <a href="help.html">Help</a>
+            <a href="orders.html">Orders</a>
+            <a href="login&signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
@@ -333,6 +333,7 @@
             </div>
         </div>
     </div>
+
   
   <div class="container">
     <button class="back-btn" onclick="history.back()">← Back to Catalogue</button>
