--- a/customer.html
+++ b/customer.html
@@ -95,8 +95,8 @@
         </div>
         <div class="help-signup">
             <a href="help.html">Help</a>
-            <a href="#">Orders</a>
-            <a href="signup.html">Log In</a>
+            <a href="orders.html">Orders</a>
+            <a href="login&signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
@@ -104,6 +104,7 @@
             </div>
         </div>
     </div>
+
 
 
     <div class="container">
