--- a/cricket_product4.html
+++ b/cricket_product4.html
@@ -380,7 +380,8 @@
   <footer>
         <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
-            <button>Sign Up for Free →</button>
+            <button onclick="window.location.href='https://ryanatrix.github.io/UID/login&signup.html'">Sign Up for Free →</button>
+
         </div>
         <div class="footer-content">
             <div class="footer-column">
