--- a/customer.html
+++ b/customer.html
@@ -76,6 +76,7 @@
             margin-top: 60px;
         }
     </style>
+    <link rel="icon" href="fav.jpeg" type="image/jpeg">
 </head>
 
 <body>
