--- a/help.html
+++ b/help.html
@@ -62,6 +62,7 @@
             text-decoration: underline;
         }
     </style>
+    <link rel="icon" href="fav.jpeg" type="image/jpeg">
 </head>
 
 <body>
