--- a/orders.html
+++ b/orders.html
@@ -334,6 +334,19 @@
             </div>
         </div>
     </div>
+<h1 style="text-align: center;">Order History</h1>
+  <div id="cart-container"></div>
+  <div style="display: flex; justify-content: center; align-items: center; gap: 14px; margin: 100px 0;">
+</div>
+  <script src="auth.js"></script>
+  <script>
+    window.addEventListener("load", function() {
+      if (typeof displayCartStack === 'function') {
+        displayCartStack();
+      }
+    });
+  </script>
+
 <footer>
         <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
