--- a/kids_product1.html
+++ b/kids_product1.html
@@ -358,11 +358,10 @@
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">S</div>
+	    <div class="size-option" onclick="selectSize(this)">XXS</div>
+            <div class="size-option" onclick="selectSize(this)">XS</div>
+	    <div class="size-option" onclick="selectSize(this)">S</div>
             <div class="size-option" onclick="selectSize(this)">M</div>
-            <div class="size-option" onclick="selectSize(this)">L</div>
-            <div class="size-option" onclick="selectSize(this)">XL</div>
-            <div class="size-option" onclick="selectSize(this)">XXL</div>
           </div>
         </div>
 
