--- a/kids_product1.html
+++ b/kids_product1.html
@@ -358,10 +358,10 @@
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-	    <div class="size-option" onclick="selectSize(this)">XXS</div>
-            <div class="size-option" onclick="selectSize(this)">XS</div>
-	    <div class="size-option" onclick="selectSize(this)">S</div>
-            <div class="size-option" onclick="selectSize(this)">M</div>
+	    <div class="size-option" onclick="selectSize(this)">0-2 Y</div>
+            <div class="size-option" onclick="selectSize(this)">2-4 Y</div>
+	    <div class="size-option" onclick="selectSize(this)">4-6 Y</div>
+            <div class="size-option" onclick="selectSize(this)">6-8 Y</div>
           </div>
         </div>
 
