--- a/kids_product3.html
+++ b/kids_product3.html
@@ -359,11 +359,10 @@
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">S</div>
-            <div class="size-option" onclick="selectSize(this)">M</div>
-            <div class="size-option" onclick="selectSize(this)">L</div>
-            <div class="size-option" onclick="selectSize(this)">XL</div>
-            <div class="size-option" onclick="selectSize(this)">XXL</div>
+            <div class="size-option" onclick="selectSize(this)">0-2 Y</div>
+            <div class="size-option" onclick="selectSize(this)">2-4 Y</div>
+	    <div class="size-option" onclick="selectSize(this)">4-6 Y</div>
+            <div class="size-option" onclick="selectSize(this)">6-8 Y</div>
           </div>
         </div>
 
