--- a/orders.html
+++ b/orders.html
@@ -336,7 +336,7 @@
     </div>
 <h1 style="text-align: center;">Order History</h1>
   <div id="cart-container"></div>
-  <div style="display: flex; justify-content: center; align-items: center; gap: 14px; margin: 100px 0;">
+  <div style=" gap: 14px; margin: 100px 0;">
 </div>
   <script src="auth.js"></script>
   <script>
