--- a/cart.html
+++ b/cart.html
@@ -336,7 +336,7 @@
     </div>
   <h1 style="text-align: center;">Shopping Cart</h1>
   <div id="cart-container"></div>
-  <div style=" justify-content: center; align-items: center;gap: 14px; margin: 100px 0;">
+  <div style="display: flex; justify-content: center; align-items: center; gap: 14px; margin: 100px 0;">
   <button 
     onclick="appendCartToStack();emptyUserCart();" 
     style="background: #111; color: #fff; border: none; padding: 10px 24px; border-radius: 0; font-size: 1.08rem; font-weight: 500; box-shadow: 0 2px 8px rgba(0,0,0,0.18); cursor: pointer; letter-spacing: 0.5px; transition: background 0.2s, transform 0.1s, box-shadow 0.2s;"
