--- a/men_product1.html
+++ b/men_product1.html
@@ -367,7 +367,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="001" data-name="Nike performance tee" data-price="₹1495.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="001" data-name="Nike performance tee" data-price="1495.00">
   		        Add to Bag
 	        </button>
         </div>
