--- a/men_product2.html
+++ b/men_product2.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Nike Real Madrid 24/25 Home Jersey</title>
   <style>
     html,body {
             margin: 0;
