--- a/men_product2.html
+++ b/men_product2.html
@@ -367,7 +367,7 @@
         </div>
 
          <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="002" data-name="Nike Real Madrid 24/25 Home Jersey" data-price="₹4,799.50">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="002" data-name="Nike Real Madrid 24/25 Home Jersey" data-price="4799.50">
   		        Add to Bag
 	        </button>
         </div>
