--- a/men_product3.html
+++ b/men_product3.html
@@ -366,7 +366,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="003" data-name="Arsenal UBP Tee data-price="₹3,799">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="003" data-name="Arsenal UBP Tee data-price="3799">
   		        Add to Bag
 	        </button>
         </div>
