--- a/shoes_product1.html
+++ b/shoes_product1.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Nike Zoom Fly 6 Men's Racing Shoes</title>
   <style>
     html,body {
             margin: 0;
@@ -351,7 +351,7 @@
 
       <div class="product-details">
         <h1>Nike Zoom Fly 6 Men's Racing Shoes</h1>
-        <h2> ₹16,995.00</h2>
+        <h2> ₹16994.99</h2>
 
         <p><strong>Description:</strong> Built for speed and endurance, the Nike Zoom Fly 6 delivers responsive cushioning and a lightweight feel to help you power through every mile. Designed for racers chasing personal bests.</p>
 
@@ -368,7 +368,7 @@
         </div>
 
        <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="301" data-name="Nike Zoom Fly 6 Men's Racing Shoes" data-price="₹16,995.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="301" data-name="Nike Zoom Fly 6 Men's Racing Shoes" data-price="16994.99">
   		        Add to Bag
 	        </button>
         </div>
