--- a/men_product4.html
+++ b/men_product4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>High-top Sneakers</title>
+  <title>Jordan Brooklyn Fleece Shorts</title>
   <style>
      html,body {
             margin: 0;
@@ -350,7 +350,7 @@
 
       <div class="product-details">
         <h1>Jordan Brooklyn Fleece Shorts</h1>
-        <h2> ₹2695.00</h2>
+        <h2> ₹2694.99</h2>
 
         <p><strong>Description:</strong> Soft, stylish, and built for everyday comfort. The Jordan Brooklyn Fleece Shorts feature premium fleece fabric with a relaxed fit — perfect for off-court vibes or casual wear.</p>
 
@@ -366,7 +366,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="004" data-name="Jordan Brooklyn Fleece Shorts" data-price="₹2695.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="004" data-name="Jordan Brooklyn Fleece Shorts" data-price="2694.99">
   		        Add to Bag
 	        </button>
         </div>
