--- a/shoes_product2.html
+++ b/shoes_product2.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Nike Air Max Men's Workout Shoes</title>
   <style>
     html,body {
             margin: 0;
