--- a/men_product5.html
+++ b/men_product5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Comfort Sliders</title>
+  <title>Balenciaga Black Crewneck Logo T-shirt</title>
   <style>
     html,body {
             margin: 0;
@@ -366,7 +366,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="005" data-name="Balenciaga Black Crewneck Logo T-shirt" data-price="₹53500.41">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="005" data-name="Balenciaga Black Crewneck Logo T-shirt" data-price="53500.41">
   		        Add to Bag
 	        </button>
         </div>
