--- a/shoes_product3.html
+++ b/shoes_product3.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Nike Dunk Low Retro</title>
   <style>
     html,body {
             margin: 0;
@@ -351,7 +351,7 @@
 
       <div class="product-details">
         <h1>Nike Dunk Low Retro</h1>
-        <h2> ₹8,695.00</h2>
+        <h2> ₹8694.99</h2>
 
         <p><strong>Description:</strong> A timeless icon returns. The Nike Dunk Low Retro pairs classic hoops style with premium materials and bold colorways, delivering everyday comfort and undeniable street appeal.</p>
 
@@ -368,7 +368,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="303" data-name="Nike Dunk Low Retro" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="303" data-name="Nike Dunk Low Retro" data-price="8694.99">
   		        Add to Bag
 	        </button>
         </div>
