--- a/men_product6.html
+++ b/men_product6.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cricket Spikes</title>
+  <title>Air Jordan Wordmark Hoodie</title>
   <style>
     html,body {
             margin: 0;
@@ -364,7 +364,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="006" data-name="Air Jordan Wordmark Hoodie" data-price="₹5995.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="006" data-name="Air Jordan Wordmark Hoodie" data-price="5995.00">
   		        Add to Bag
 	        </button>
         </div>
