--- a/men_product7.html
+++ b/men_product7.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Gym Trainers</title>
+  <title>Nike Pro Fitness Top</title>
   <style>
      html,body {
             margin: 0;
@@ -365,7 +365,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="007" data-name="Nike Pro Fitness Top" data-price=" ₹1495.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="007" data-name="Nike Pro Fitness Top" data-price=" 1495.00">
   		        Add to Bag
 	        </button>
         </div>
