--- a/shoes_product4.html
+++ b/shoes_product4.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Nike Dunk High Retro</title>
   <style>
     html,body {
             margin: 0;
@@ -351,7 +351,7 @@
 
       <div class="product-details">
         <h1>Nike Dunk High Retro</h1>
-        <h2> ₹10,257.37</h2>
+        <h2> ₹10257.37</h2>
 
         <p><strong>Description:</strong> Heritage meets high-top style. The Nike Dunk High Retro brings back the '80s basketball classic with premium leather, bold color blocking, and padded comfort </p>
 
@@ -368,7 +368,7 @@
         </div>
 
        <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="304" data-name="Nike Dunk High Retro" data-price="₹10,257.37">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="304" data-name="Nike Dunk High Retro" data-price="10257.37">
   		        Add to Bag
 	        </button>
         </div>
