--- a/men_product8.html
+++ b/men_product8.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Basketball Shoes</title>
+  <title>LeBron James Los Angeles Lakers 2024 Select Series</title>
   <style>
     html,body {
             margin: 0;
@@ -364,7 +364,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="008" data-name="LeBron James Los Angeles Lakers 2024 Select Series" data-price="₹7995.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="008" data-name="LeBron James Los Angeles Lakers 2024 Select Series" data-price="7995.00">
   		        Add to Bag
 	        </button>
         </div>
