--- a/men_product9.html
+++ b/men_product9.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Urban Formal Sneakers</title>
+  <title>Nike Tech Men's Full-Zip Windrunner Hoodie</title>
   <style>
    html,body {
             margin: 0;
@@ -365,7 +365,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="009" data-name="Nike Tech Men's Full-Zip Windrunner Hoodie" data-price="₹11556.09">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="009" data-name="Nike Tech Men's Full-Zip Windrunner Hoodie" data-price="11556.09">
   		        Add to Bag
 	        </button>
         </div>
