--- a/shoes_product5.html
+++ b/shoes_product5.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Nike Calm Men's Slides</title>
   <style>
     html,body {
             margin: 0;
@@ -351,7 +351,7 @@
 
       <div class="product-details">
         <h1>Nike Calm Men's Slides</h1>
-        <h2> ₹3,895.00</h2>
+        <h2> ₹3894.99</h2>
 
         <p><strong>Description:</strong> Slip into comfort. The Nike Calm Slides feature a soft, contoured foam design for lightweight cushioning and easy, everyday wear.</p>
 
@@ -368,7 +368,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="305" data-name="Nike Calm Men's Slides" data-price="₹3,895.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="305" data-name="Nike Calm Men's Slides" data-price="3894.99">
   		        Add to Bag
 	        </button>
         </div>
